--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ html {
     height: 100%;
     overflow-x: auto;   
     overflow-y: auto; 
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+
 }
 
 .pantallas {
